[package]
name = "tracing_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.37"
tracing-error = { version = "0.2.0", features = ["traced-error"] }
tracing-subscriber = "0.3.16"
uuid = { version = "1.3.1", features = ["v4"] }
